-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
9483fcd68 (dev), bfea12b88 (6.5)
Not sure if this is a bug, but it is certainly a behavior change from Qt 5.
A pointer to a class can fail to be queued with AutoConnection with following message:
qt.core.qobject.connect: QObject::connect: Cannot queue arguments of type 'MyType*' (Make sure 'MyType*' is registered using qRegisterMetaType().)
If QueuedConnection is used in the connect() statement, then the signal parameters are apparently registered within the connect() statement automatically through QtPrivate::ConnectionTypes<typename SignalType::Arguments>::types();.
Alternatively if the MyType header is included with Q_MOC_INCLUDE or there is a call to qRegisterMetaType for it, it also works with AutoConnection.